[package]
name = "InternetTry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.87"
getrandom = { features = ["js"], version = "0.2.10" }
js-sys = "0.3.64"
web-sys = "0.3.64"